# Learn_DA

./: README.md  docker-compose.prod.yml
deploy/: .env.example  DOCKER_MIRROR.md
docs/product/: 2026-05-29-learn-da-phase1-product-closure.md  2026-05-29-learn-da-phase1-task-list.md
learn_da/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  alembic.ini  docker-compose.yml  learn_da.db  main.py  package-lock.json  pyproject.toml  test_upgrade.py
learn_da/app/: __init__.py
learn_da/app/agent/: config.py  intelligent_routing.py  knowledge.py  prompts.py  results.py  router.py  routing.py  schemas.py  service.py  session.py  streaming.py  tools.py  vector_store.py
learn_da/app/analytics/: models.py  repository.py  router.py  schemas.py  service.py
learn_da/app/auth/: __init__.py  depends.py  exceptions.py  models.py  repository.py  router.py  schemas.py  schemas_res.py  service.py
learn_da/app/core/: __init__.py  content_loader.py
learn_da/app/core/database/: base.py  database.py  model_registry.py
learn_da/app/core/exceptions/: base_exceptions.py  exception_handler.py
learn_da/app/core/redis/: __init__.py  async_client.py  pool.py
learn_da/app/learning/: recommendation.py  repository.py  router.py  schemas.py  service.py
learn_da/app/middleware/: __init__.py  access_log.py  cors.py  rate_limit.py  security.py
learn_da/app/playground/: router.py  schemas.py  service.py  validators.py
learn_da/app/sandbox/: __init__.py  docker_runner.py  local_runner.py  safety_check.py  schemas.py  service.py
learn_da/app/utils/: __init__.py  base_request.py  base_response.py  init_db.py  limiter.py  logger.py  minio_service.py  pagination.py  rate_limit_config.py  register_router.py  security.py  tasks.py
learn_da/config/: settings.py
learn_da/content/: catalog.yml
learn_da/content/examples/: duckdb-aggregate.md  duckdb-create-table.md  polars-filter.md  polars-select.md
learn_da/content/lessons/: 01-polars-basics.md  02-duckdb-analytics.md  03-polars-groupby.md  04-polars-expressions.md  05-polars-cleaning.md  06-polars-joins.md  07-duckdb-sql-foundations.md  08-duckdb-joins-cte.md  09-duckdb-window-functions.md  10-polars-lazy-pipeline.md  11-polars-duckdb-workflow.md  12-python-functions.md  13-python-collections.md
learn_da/docker/: setup-debian-apt-mirrors.sh
learn_da/migrations/: env.py
learn_da/migrations/versions/: 20e1c08fcbb7_initial_users_table.py  8889d5c72779_add_notices_table.py  92845c146ce6_add_analytics_tables.py
learn_da/tests/: conftest.py  test_health.py
learn_da/tests/unit/: test_agent_service.py  test_learning_catalog.py  test_playground_service.py  test_recommendation_generalization.py  test_utils.py
learn_da_vue/: .dockerignore  .env.development  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
learn_da_vue/docker/: setup-debian-apt-mirrors.sh
learn_da_vue/src/: App.vue  main.ts
learn_da_vue/src/api/: agent.ts  analytics.ts  index.ts  learning.ts  playground.ts  recommendation.ts
learn_da_vue/src/lib/: learningTracks.ts  markdown.ts  recommendation.ts  visitorId.ts
learn_da_vue/src/router/: index.ts
(+14 files in other folders)
